--- a/examples/hpc_api.ipynb
+++ b/examples/hpc_api.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "\n",
     "# Setting the client_id of the hpc app and pass the access_token to using the app through SDK\n",
-    "hpc = HpcGatewayApp(client_id=\"5fd66c68-50e9-474a-b55d-148777ae3efd\",\n",
+    "hpc = HpcGatewayApp(client_id=\"<client_id>\",\n",
     "                    access_token=os.environ.get('MP_ACCESS_TOKEN'))"
    ]
   },
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# The heartbeat capability to show the state of server and the HPC resource\n",
-    "print(hpc.status())"
+    "print(hpc.heartbeat())"
    ]
   },
   {
@@ -43,15 +43,6 @@
     "# The resource_id returned will be the remote path\n",
     "resourceid = hpc.new_job(config=None)\n",
     "print(resourceid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resourceid = \"57d2e957-fcd3-4ebf-8325-30a502daf80f\""
    ]
   },
   {
