HPC app example update

--- a/examples/hpc_api.ipynb
+++ b/examples/hpc_api.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from marketplace.app.hpc_app import HpcGatewayApp\n",
+    "from marketplace.app import MarketPlaceApp\n",
     "import os\n",
     "\n",
     "# Setting the client_id of the hpc app and pass the access_token to using the app through SDK\n",
-    "hpc = HpcGatewayApp(client_id=\"<client_id>\",\n",
-    "                    access_token=os.environ.get('MP_ACCESS_TOKEN'))"
+    "hpc = MarketPlaceApp(\n",
+    "    client_id=os.environ.get(\"CLIENT_ID\"),\n",
+    "    access_token=os.environ.get(\"ACCESS_TOKEN\"),\n",
+    ")"
    ]
   },
   {
