Update example notebook and fix endpoint delete_job.

--- a/examples/hpc_api.ipynb
+++ b/examples/hpc_api.ipynb
@@ -11,8 +11,8 @@
     "\n",
     "# Setting the client_id of the hpc app and pass the access_token to using the app through SDK\n",
     "hpc = MarketPlaceApp(\n",
-    "    client_id=os.environ.get(\"CLIENT_ID\"),\n",
-    "    access_token=os.environ.get(\"ACCESS_TOKEN\"),\n",
+    "    client_id=\"<client_id>\",\n",
+    "    access_token=\"<access_token>\",\n",
     ")"
    ]
   },
@@ -93,6 +93,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# upload -> delete test\n",
+    "hpc.upload(resourceid=resourceid, source_path='./sample_files/colloid.in')\n",
+    "!ssh daint.cscs.ch $cmd # upload check\n",
+    "\n",
+    "hpc.delete_file(resourceid=resourceid, filename=\"colloid.in\")\n",
+    "cmd = f'ls -l /scratch/snx3000/jyu/firecrest/jusong_yu/{resourceid}'\n",
+    "!ssh daint.cscs.ch $cmd # delete check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# send LAMMPS input file and job script to remote folder\n",
     "hpc.upload(resourceid=resourceid, source_path='./sample_files/colloid.in')\n",
     "hpc.upload(resourceid=resourceid, source_path='./sample_files/submit.sh')"
@@ -137,7 +152,7 @@
    "source": [
     "import json\n",
     "\n",
-    "jblst = hpc.list_job()\n",
+    "jblst = hpc.list_jobs()\n",
     "print(json.dumps(jblst, indent=2))"
    ]
   },
@@ -157,8 +172,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jblst = hpc.list_job()\n",
+    "jblst = hpc.list_jobs()\n",
     "print(jblst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOT supported yet\n",
+    "# cancel_message = hpc.cancel_job(resourceid=resourceid)\n",
+    "# print(cancel_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delete_job_message = hpc.delete_job(resourceid=resourceid)\n",
+    "print(delete_job_message)"
    ]
   },
   {
