update documentation per latest version

--- a/examples/hpc_api.ipynb
+++ b/examples/hpc_api.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from marketplace.app.hpc_app import HpcGatewayApp\n",
-    "import os\n",
-    "\n",
-    "# Setting the client_id of the hpc app and pass the access_token to using the app through SDK\n",
-    "hpc = HpcGatewayApp(client_id=\"<client_id>\",\n",
+    "from marketplace.app.v0_0_1.hpc_app import HpcGatewayApp\r\n",
+    "import os\r\n",
+    "\r\n",
+    "# Setting the client_id of the hpc app and pass the access_token to using the app through SDK\r\n",
+    "hpc = HpcGatewayApp(client_id=\"<client_id>\",\r\n",
     "                    access_token=os.environ.get('MP_ACCESS_TOKEN'))"
    ]
   },
